--- a/test/fixtures/scrappers.yml
+++ b/test/fixtures/scrappers.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  type: 
+  category: MyString
   description: MyText
 
 two:
-  type: 
+  category: MyString
   description: MyText
