--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,17 @@
 # React on Rails
 npm-debug.log
 node_modules
+*.rbc
+capybara-*.html
+.rspec
+/log
+/tmp
+/db/*.sqlite3
+/db/*.sqlite3-journal
+/public/system
+/coverage/
+/spec/tmp
+**.orig
+rerun.txt
+pickle-email-*.html
 
